app/assets/stylesheets/footer.css.scss
#footer {

  @include plaintext-font();
  background: lighten($darker-color, 6%);
       color: $lighter-color;
   font-size: 1.05em;
    position: fixed;
       width: 100%;
  text-align: left;
      bottom: 0px;
     padding: { left: 15px; top: 0px; bottom: 2px; }

  #home-page-logo {
      cursor: pointer;
    position: relative;
         top: 3px;
  }

  #tweet-container {
    #twitter-widget-0 {
      position: relative;
           top: 5px;
        margin: { top: 7px; }
    }
  }

  .bullet {
    margin: { left: 10px; right: 10px; }

    $bullet: "\2022";
    &:after { content: $bullet; }
  }

  #accu-container {
    #accu-image {
      @include rounded-corner(3px);
      background: CornSilk;
         padding: 5px;
           width: 50px;
          margin: { top: 7px; }
    }
  }

  #cucumber-container {
    #cucumber-image {
      padding: 0px;
        width: 85px;
       height: 27px;
       margin: 0px;
    }
  }

  #learn-more-button {
    @include non-code-font();
       padding: { right: 10px; bottom: 2px; }
        margin: { top: 4px; }
         width: 80px;
         color: darken($darker-color, 10%);
    text-align: right;
     font-size: 0.87em;
  }
}

